fix: update test suite for new entity fields and custom exceptions
- Add profileImageUrl parameter to User constructor in all tests
- Add discountPercent, initialStock, dealExpiresAt, featured to Product constructor
- Update UserServiceImplTest for new updatePassword signature (currentPassword + newPassword)
- Add test for incorrect current password throwing IllegalArgumentException
- Fix duplicate exception assertions: IllegalArgumentException → DuplicateResourceException
- Applies to CategoryServiceImplTest, ProductServiceImplTest, UserServiceImplTest
- Add JWT config (jwt.secret, jwt.expiration) to test application.properties
- All 192 tests passing